--- a/css/variables.scss
+++ b/css/variables.scss
@@ -12,6 +12,9 @@ $navbar-color : #10230f;
 $ham-lines : #888;
 $ham-border-color: #ddd;
 
+//Bckground color for products
+$products-background :#cfea4d;
+
 //Social media icons special size
 $ipad-size : 24px;
 $large-size : 25px;
