--- a/css/non-main-pages/non-main-pages.scss
+++ b/css/non-main-pages/non-main-pages.scss
@@ -67,17 +67,84 @@ body{
     -moz-background-size: cover;
 
   }
-
   .full-article{
     background-color:white;
     height: 100%;
     padding-bottom: 140px;
+    border-radius: 10px;
+    padding: 10px;
+  }
+
+  .phone{
+    color: white;
+  }
+}
+//===Product layout==========
+.product-category{
+  text-align: center;
+  font-family: Greek;
+  font-style: italic;
+  border-bottom: 1px solid $products-background;
+  padding-bottom: 10px;
+}
+
+.product-row{
+  background-color: #e4e4e4;
+  margin: 10px 10px 40px 10px;
+  border-radius: 10px;
+  padding-bottom: 10px;
+}
+
+.product-name{
+  display: block;
+  position: relative;
+  z-index: 1;
+
+
+}
+
+.hook-img{
+    background: url("../../images/product-name.png")no-repeat;
+    position: absolute;
+    top: -26px;
+    left: -15px;
+    width: 320px;
+    height: 100px;
+    background-size: 180px 50px;
+  span{
+    font-family: Greek;
+    font-style: italic;
+    font-size: 18px;
+    color: white;
+    position: absolute;
+    top: 10px;
+    left: 55px;
+  }
+  .long-product{
+    position: absolute;
+    top: 10px;
+    left: 25px;
   }
 
 
 }
 
-//=========End meat page============
+.product-image{
+  padding-top: 60px;
+
+}
+
+.product-text{
+  margin-top: 45px;
+}
+
+.no-indent{
+  text-indent: 0px;
+}
+
+//===End Product layout==========
+
+
 
 .navbar-default{
   border-left: none;
