--- a/css/non-main-pages/galaxy-resolutions/galaxy-resolutions.scss
+++ b/css/non-main-pages/galaxy-resolutions/galaxy-resolutions.scss
@@ -47,7 +47,18 @@
 
   }
 
+  #meat-page{
+    .footer{
+      position: relative;
+      width: 100%;
 
+    }
+  }
+
+  .what-they-say{
+    width: 100%;
+    height: 1100px;
+  }
 }
 
 
