--- a/css/non-main-pages/small-medium-screens/non-main-small-medium.scss
+++ b/css/non-main-pages/small-medium-screens/non-main-small-medium.scss
@@ -58,6 +58,36 @@
 
   }
 
+  .what-they-say{
+    width: 100%;
+    height: 1300px;
+  }
+
+
+  //======Contact=======
+  .contact-page{
+    .product-category{
+      font-size: 25px;
+    }
+
+    .emphasis{
+      p{
+        font-size: 18px;
+      }
+    }
+
+    .find-us{
+      text-align: center;
+      font-style: italic;
+      font-family: Greek;
+      font-size: 25px;
+    }
+
+    .google-map{
+      height: 400px;
+    }
+  }
+
 
 
 }
