--- a/css/non-main-pages/iPad-screens/non-main-medium-iPad-landscape.scss
+++ b/css/non-main-pages/iPad-screens/non-main-medium-iPad-landscape.scss
@@ -69,6 +69,37 @@
 
   }
 
+  .what-they-say{
+    width: 100%;
+    height: 1000px;
+  }
+
+  //======Contact=======
+  .contact-page{
+    .product-category{
+      font-size: 32px;
+    }
+
+    .emphasis{
+      p{
+        font-size: 18px;
+      }
+    }
+
+    .find-us{
+      text-align: center;
+      font-style: italic;
+      font-family: Greek;
+      font-size: 25px;
+    }
+
+    .google-map{
+      height: 500px;
+    }
+  }
+
+
+
 
 }
 
