--- a/css/non-main-pages/large-screens/non-main-large.scss
+++ b/css/non-main-pages/large-screens/non-main-large.scss
@@ -1,7 +1,33 @@
 @import "../../variables";
 
-//==========Medium iPad portrait screens==============
+//==========Large screens==============
 @media only screen and (min-width:1200px) {
+
+  #horizontal-menu {
+    min-width: 680px;
+    padding-left: 0;
+    margin-left: -300px;
+    list-style: none;
+
+    background-color: #10230f;
+    color: white;
+
+    li a:hover {
+      color: black;
+      border-radius: 3%;
+      line-height: 33px;
+    }
+    li {
+      display: inline-block;
+    }
+  }
+
+  .arrow-angle{
+    display: inline-block;
+  }
+
+
+
   #butcher-shop-page {
     background: url("../../images/butcher-shop/Farma.2.jpg") no-repeat ;
     background-size: cover;
@@ -25,12 +51,13 @@
 
   }
 
+  //=====History=========
   #history{
-
-
-  .article-with-opacity{
+    .article-with-opacity{
     height: 460px;
   }
+
+
 
   .image-figure{
     margin-top: 0;
@@ -38,6 +65,41 @@
   }
 
   }
+  //=====End History=========
+
+  //=====Contact page=========
+  .contact-page{
+
+    .contact-image{
+      height: 435px;
+    }
+    .emphasis{
+      height: 435px;
+    }
+
+    .product-category{
+      font-size: 32px;
+    }
+
+    .emphasis{
+      p{
+        font-size: 22px;
+      }
+    }
+
+    .find-us{
+      text-align: center;
+      font-style: italic;
+      font-family: Greek;
+      font-size: 25px;
+    }
+
+    .google-map{
+      height: 600px;
+    }
+  }
+
+
   .top-icons-nav{
     padding: 35px 0 8px 0px;
   }
@@ -67,9 +129,8 @@
 
   .footer{
     height: 65px;
+
   }
-
-
 
 
   .footer-rights{
@@ -93,6 +154,18 @@
   }
 
 
+  #meat-page{
+    .footer{
+      position: relative;
+      width: 100%;
+
+    }
+  }
+
+  .what-they-say{
+    width: 100%;
+    height: 1900px;
+  }
 
 
 
