--- a/css/non-main-pages/non-main-pages.css
+++ b/css/non-main-pages/non-main-pages.css
@@ -72,7 +72,6 @@
 
   #slide-nav #slidemenu .navbar-nav .dropdown-menu li a {
     min-width: 0;
-    width: 80%;
     white-space: normal; }
 
   #slide-nav.navbar-inverse #slidemenu {
@@ -247,6 +246,30 @@ body {
 .no-indent {
   text-indent: 0px; }
 
+#horizontal-menu {
+  background-color: #10230f;
+  color: white; }
+  #horizontal-menu li a {
+    color: white; }
+  #horizontal-menu li a:hover {
+    color: black; }
+
+.arrow-angle {
+  display: none; }
+
+#horizontal-menu .product-active {
+  background-color: white;
+  color: black;
+  line-height: 33px; }
+
+.emphasis {
+  font-style: italic;
+  font-weight: bold;
+  font-family: Greek; }
+
+.contact-page .emphasis {
+  border: 1px solid black; }
+
 .navbar-default {
   border-left: none;
   border-top: 1px solid white;
@@ -369,7 +392,21 @@ address {
 
   .footer-rights {
     font-size: 10px;
-    text-align: center; } }
+    text-align: center; }
+
+  .what-they-say {
+    width: 100%;
+    height: 1600px; }
+
+  .contact-page .product-category {
+    font-size: 25px; }
+  .contact-page .emphasis p {
+    font-size: 13px; }
+  .contact-page .find-us {
+    text-align: center;
+    font-style: italic;
+    font-family: Greek;
+    font-size: 25px; } }
 @media only screen and (min-width: 410px) and (max-width: 478px) {
   .logo-absolute {
     position: absolute;
@@ -418,7 +455,23 @@ address {
     color: white; }
 
   .navbar-nav {
-    background-color: #10230f; } }
+    background-color: #10230f; }
+
+  .what-they-say {
+    width: 100%;
+    height: 1300px; }
+
+  .contact-page .product-category {
+    font-size: 25px; }
+  .contact-page .emphasis p {
+    font-size: 18px; }
+  .contact-page .find-us {
+    text-align: center;
+    font-style: italic;
+    font-family: Greek;
+    font-size: 25px; }
+  .contact-page .google-map {
+    height: 400px; } }
 @font-face {
   font-family: 'Greek';
   src: url(../../fonts/GFSSolomos.otf); }
@@ -454,7 +507,15 @@ address {
   .footer {
     bottom: 0;
     position: absolute;
-    width: 100%; } }
+    width: 100%; }
+
+  #meat-page .footer {
+    position: relative;
+    width: 100%; }
+
+  .what-they-say {
+    width: 100%;
+    height: 1100px; } }
 @font-face {
   font-family: 'Greek';
   src: url(../../fonts/GFSSolomos.otf); }
@@ -505,7 +566,23 @@ address {
     color: white; }
 
   .navbar-nav {
-    background-color: #10230f; } }
+    background-color: #10230f; }
+
+  .what-they-say {
+    width: 100%;
+    height: 1000px; }
+
+  .contact-page .product-category {
+    font-size: 32px; }
+  .contact-page .emphasis p {
+    font-size: 18px; }
+  .contact-page .find-us {
+    text-align: center;
+    font-style: italic;
+    font-family: Greek;
+    font-size: 25px; }
+  .contact-page .google-map {
+    height: 500px; } }
 @font-face {
   font-family: 'Greek';
   src: url(../../fonts/GFSSolomos.otf); }
@@ -558,7 +635,23 @@ address {
     color: white; }
 
   .navbar-nav {
-    background-color: #10230f; } }
+    background-color: #10230f; }
+
+  .what-they-say {
+    width: 100%;
+    height: 1000px; }
+
+  .contact-page .product-category {
+    font-size: 32px; }
+  .contact-page .emphasis p {
+    font-size: 28px; }
+  .contact-page .find-us {
+    text-align: center;
+    font-style: italic;
+    font-family: Greek;
+    font-size: 25px; }
+  .contact-page .google-map {
+    height: 600px; } }
 @media only screen and (min-width: 1025px) and (max-width: 1199px) {
   #butcher-shop-page {
     background: url("../../images/butcher-shop/Farma.2.jpg") no-repeat center center fixed;
@@ -602,11 +695,32 @@ address {
     position: absolute;
     top: 10px;
     right: 30px;
-    z-index: 999; } }
+    z-index: 999; }
+
+  .what-they-say {
+    width: 100%;
+    height: 1000px; } }
 @font-face {
   font-family: 'Greek';
   src: url(../../fonts/GFSSolomos.otf); }
 @media only screen and (min-width: 1200px) {
+  #horizontal-menu {
+    min-width: 680px;
+    padding-left: 0;
+    margin-left: -300px;
+    list-style: none;
+    background-color: #10230f;
+    color: white; }
+    #horizontal-menu li a:hover {
+      color: black;
+      border-radius: 3%;
+      line-height: 33px; }
+    #horizontal-menu li {
+      display: inline-block; }
+
+  .arrow-angle {
+    display: inline-block; }
+
   #butcher-shop-page {
     background: url("../../images/butcher-shop/Farma.2.jpg") no-repeat;
     background-size: cover;
@@ -626,6 +740,22 @@ address {
   #history .image-figure {
     margin-top: 0;
     height: 460px; }
+
+  .contact-page .contact-image {
+    height: 435px; }
+  .contact-page .emphasis {
+    height: 435px; }
+  .contact-page .product-category {
+    font-size: 32px; }
+  .contact-page .emphasis p {
+    font-size: 22px; }
+  .contact-page .find-us {
+    text-align: center;
+    font-style: italic;
+    font-family: Greek;
+    font-size: 25px; }
+  .contact-page .google-map {
+    height: 600px; }
 
   .top-icons-nav {
     padding: 35px 0 8px 0px; }
@@ -662,11 +792,29 @@ address {
     background-color: rgba(255, 255, 255, 0.9); }
 
   .navbar {
-    border-radius: 0; } }
+    border-radius: 0; }
+
+  #meat-page .footer {
+    position: relative;
+    width: 100%; }
+
+  .what-they-say {
+    width: 100%;
+    height: 1900px; } }
 @font-face {
   font-family: 'Greek';
   src: url(../../fonts/GFSSolomos.otf); }
 @media only screen and (min-width: 1200px) and (max-height: 1023px) {
+  #horizontal-menu {
+    min-width: 680px;
+    padding-left: 0;
+    margin-left: -300px;
+    list-style: none; }
+
+  #horizontal-menu {
+    background-color: #10230f;
+    color: white; }
+
   footer {
     display: block; }
 
@@ -676,7 +824,10 @@ address {
     -webkit-background-size: cover;
     -moz-background-size: cover; }
     #butcher-shop-page .phone {
-      color: white; } }
+      color: white; }
+
+  #history .footer {
+    margin-top: 100px; } }
 @media only screen and (min-width: 1280px) and (min-height: 1024px) {
   footer {
     display: block;
@@ -693,5 +844,11 @@ address {
       color: white; }
     #butcher-shop-page h1 {
       font-size: 27px; } }
+@media only screen and (min-width: 1400px) and (min-height: 900px) {
+  #history .footer {
+    display: block;
+    position: absolute;
+    bottom: 0;
+    width: 100%; } }
 
 /*# sourceMappingURL=non-main-pages.css.map */
