--- a/css/non-main-pages/non-main-pages.scss
+++ b/css/non-main-pages/non-main-pages.scss
@@ -79,6 +79,8 @@ body{
     color: white;
   }
 }
+//======End met page=======
+
 //===Product layout==========
 .product-category{
   text-align: center;
@@ -141,10 +143,52 @@ body{
 .no-indent{
   text-indent: 0px;
 }
-
 //===End Product layout==========
 
+//Horizontal top dropdown
+#horizontal-menu {
+  background-color: $navbar-color;
+  color: white;
+  li {
+    a{
+      color: white;
+    }
+  }
+  li{
+    a:hover{
+      color: black;
+    }
+  }
+}
+.arrow-angle{
+  display: none;
+}
 
+#horizontal-menu {
+  .product-active{
+  background-color: white;
+  color: black;
+    line-height: 33px;
+  }
+}
+
+
+//=======What they say========
+.emphasis{
+   font-style: italic;
+   font-weight: bold;
+   font-family: Greek;
+ }
+
+//=======End What they say========
+
+
+.contact-page{
+  .emphasis {
+    border: 1px solid black;
+  }
+
+}
 
 .navbar-default{
   border-left: none;
