--- a/css/non-main-pages/small-screens/non-main-small-screens.scss
+++ b/css/non-main-pages/small-screens/non-main-small-screens.scss
@@ -69,9 +69,39 @@
     font-size: 10px;
     text-align: center;
   }
+  .what-they-say{
+    width: 100%;
+    height: 1600px;
+  }
+
+  .contact-page{
+      .product-category{
+        font-size: 25px;
+      }
+
+      .emphasis{
+        p{
+          font-size: 13px;
+        }
+      }
+
+      .find-us{
+        text-align: center;
+        font-style: italic;
+        font-family: Greek;
+        font-size: 25px;
+      }
+
+
+
+
+  }
 
 
 }
+
+
+
 
 //Nexus and iPhone 6 plus tweaking
 @media only screen and (min-width:410px) and(max-width:478px) {
