--- a/css/customStylesheet.css
+++ b/css/customStylesheet.css
@@ -15,16 +15,28 @@ body {
   margin: 0;
   padding: 0;
   color: white;
-  background: url("../images/home-page/sheeps-hi-res-compressor.jpg") no-repeat center center fixed;
+  background-image: url("../images/home-page/main2.jpg");
+  width: 100%;
+  height: 100%;
+  background-position: center;
   background-size: cover;
   -webkit-background-size: cover;
-  -moz-background-size: cover; }
+  -moz-background-size: cover;
+  background-repeat: no-repeat;
+  background-attachment: fixed; }
 
 .phone {
   font-family: Greek;
   padding: 5px;
   border: 1px solid white;
-  border-radius: 20px; }
+  border-radius: 20px;
+  background-color: rgba(16, 35, 15, 0.8); }
+
+.quote {
+  background-color: rgba(16, 35, 15, 0.8);
+  border: 1px solid white;
+  border-radius: 10px;
+  padding: 5px; }
 
 .quote {
   font-family: 'Greek';
@@ -139,16 +151,28 @@ body {
   margin: 0;
   padding: 0;
   color: white;
-  background: url("../images/home-page/sheeps-hi-res-compressor.jpg") no-repeat center center fixed;
+  background-image: url("../images/home-page/main2.jpg");
+  width: 100%;
+  height: 100%;
+  background-position: center;
   background-size: cover;
   -webkit-background-size: cover;
-  -moz-background-size: cover; }
+  -moz-background-size: cover;
+  background-repeat: no-repeat;
+  background-attachment: fixed; }
 
 .phone {
   font-family: Greek;
   padding: 5px;
   border: 1px solid white;
-  border-radius: 20px; }
+  border-radius: 20px;
+  background-color: rgba(16, 35, 15, 0.8); }
+
+.quote {
+  background-color: rgba(16, 35, 15, 0.8);
+  border: 1px solid white;
+  border-radius: 10px;
+  padding: 5px; }
 
 .quote {
   font-family: 'Greek';
@@ -257,7 +281,7 @@ a {
     margin-top: 12px; }
 
   .quote {
-    font-size: 30px; }
+    font-size: 20px; }
 
   .footer-rights {
     margin-bottom: 5px; }
@@ -269,7 +293,7 @@ a {
     padding: 20px 20px 0 0; }
 
   .img-logo {
-    width: 180px;
+    width: 100px;
     display: block;
     margin-right: auto;
     margin-left: auto; }
@@ -297,16 +321,28 @@ body {
   margin: 0;
   padding: 0;
   color: white;
-  background: url("../images/home-page/sheeps-hi-res-compressor.jpg") no-repeat center center fixed;
+  background-image: url("../images/home-page/main2.jpg");
+  width: 100%;
+  height: 100%;
+  background-position: center;
   background-size: cover;
   -webkit-background-size: cover;
-  -moz-background-size: cover; }
+  -moz-background-size: cover;
+  background-repeat: no-repeat;
+  background-attachment: fixed; }
 
 .phone {
   font-family: Greek;
   padding: 5px;
   border: 1px solid white;
-  border-radius: 20px; }
+  border-radius: 20px;
+  background-color: rgba(16, 35, 15, 0.8); }
+
+.quote {
+  background-color: rgba(16, 35, 15, 0.8);
+  border: 1px solid white;
+  border-radius: 10px;
+  padding: 5px; }
 
 .quote {
   font-family: 'Greek';
@@ -405,6 +441,9 @@ a {
   display: none; }
 
 @media only screen and (min-width: 481px) and (max-width: 767px) {
+  .quote {
+    font-size: 22px; }
+
   .img-logo {
     width: 130px;
     display: block;
@@ -443,16 +482,28 @@ body {
   margin: 0;
   padding: 0;
   color: white;
-  background: url("../images/home-page/sheeps-hi-res-compressor.jpg") no-repeat center center fixed;
+  background-image: url("../images/home-page/main2.jpg");
+  width: 100%;
+  height: 100%;
+  background-position: center;
   background-size: cover;
   -webkit-background-size: cover;
-  -moz-background-size: cover; }
+  -moz-background-size: cover;
+  background-repeat: no-repeat;
+  background-attachment: fixed; }
 
 .phone {
   font-family: Greek;
   padding: 5px;
   border: 1px solid white;
-  border-radius: 20px; }
+  border-radius: 20px;
+  background-color: rgba(16, 35, 15, 0.8); }
+
+.quote {
+  background-color: rgba(16, 35, 15, 0.8);
+  border: 1px solid white;
+  border-radius: 10px;
+  padding: 5px; }
 
 .quote {
   font-family: 'Greek';
@@ -600,16 +651,28 @@ body {
   margin: 0;
   padding: 0;
   color: white;
-  background: url("../images/home-page/sheeps-hi-res-compressor.jpg") no-repeat center center fixed;
+  background-image: url("../images/home-page/main2.jpg");
+  width: 100%;
+  height: 100%;
+  background-position: center;
   background-size: cover;
   -webkit-background-size: cover;
-  -moz-background-size: cover; }
+  -moz-background-size: cover;
+  background-repeat: no-repeat;
+  background-attachment: fixed; }
 
 .phone {
   font-family: Greek;
   padding: 5px;
   border: 1px solid white;
-  border-radius: 20px; }
+  border-radius: 20px;
+  background-color: rgba(16, 35, 15, 0.8); }
+
+.quote {
+  background-color: rgba(16, 35, 15, 0.8);
+  border: 1px solid white;
+  border-radius: 10px;
+  padding: 5px; }
 
 .quote {
   font-family: 'Greek';
@@ -757,16 +820,28 @@ body {
   margin: 0;
   padding: 0;
   color: white;
-  background: url("../images/home-page/sheeps-hi-res-compressor.jpg") no-repeat center center fixed;
+  background-image: url("../images/home-page/main2.jpg");
+  width: 100%;
+  height: 100%;
+  background-position: center;
   background-size: cover;
   -webkit-background-size: cover;
-  -moz-background-size: cover; }
+  -moz-background-size: cover;
+  background-repeat: no-repeat;
+  background-attachment: fixed; }
 
 .phone {
   font-family: Greek;
   padding: 5px;
   border: 1px solid white;
-  border-radius: 20px; }
+  border-radius: 20px;
+  background-color: rgba(16, 35, 15, 0.8); }
+
+.quote {
+  background-color: rgba(16, 35, 15, 0.8);
+  border: 1px solid white;
+  border-radius: 10px;
+  padding: 5px; }
 
 .quote {
   font-family: 'Greek';
@@ -886,7 +961,7 @@ a {
     padding: 20px 20px 0 0; }
 
   .img-logo {
-    width: 280px;
+    width: 240px;
     display: block;
     margin-right: auto;
     margin-left: auto; }
@@ -898,9 +973,6 @@ a {
 
   .phone, .hours-table {
     font-size: 22px; }
-
-  .quote {
-    font-size: 55px; }
 
   #horizontal-menu {
     min-width: 680px;
