--- a/css/general-mixins.scss
+++ b/css/general-mixins.scss
@@ -18,11 +18,15 @@ body{
   margin: 0;
   padding: 0;
   color: white;
-  background: url("../images/home-page/sheeps-hi-res-compressor.jpg")no-repeat center center fixed;
+  background-image: url("../images/home-page/main2.jpg");
+  width: 100%;
+  height: 100%;
+  background-position:center;
   background-size: cover;
   -webkit-background-size: cover;
   -moz-background-size: cover;
-
+  background-repeat: no-repeat;
+  background-attachment: fixed;
 }
 
 .phone{
@@ -30,9 +34,17 @@ body{
   padding: 5px;
   border: 1px solid white;
   border-radius: 20px;
+  background-color:rgba(16, 35, 15, 0.8) ;
+
 }
 
+.quote{
 
+  background-color:rgba(16, 35, 15, 0.8) ;
+  border: 1px solid white;
+  border-radius: 10px;
+  padding: 5px;
+}
 
 
 
