--- a/css/small-medium-screen/small-medium-screen.scss
+++ b/css/small-medium-screen/small-medium-screen.scss
@@ -3,7 +3,9 @@
 
 //==========Small to Medium screens==============
 @media only screen and (min-width:481px) and(max-width:767px) {
-
+  .quote{
+    font-size: 22px;
+  }
 
 
 
