--- a/css/customStylesheet.css
+++ b/css/customStylesheet.css
@@ -14,16 +14,7 @@ html {
 body {
   margin: 0;
   padding: 0;
-  color: white;
-  background-image: url("../images/home-page/main2.jpg");
-  width: 100%;
-  height: 100%;
-  background-position: center;
-  background-size: cover;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  background-repeat: no-repeat;
-  background-attachment: fixed; }
+  color: white; }
 
 .phone {
   font-family: Greek;
@@ -134,6 +125,44 @@ a {
 .arrow-angle {
   display: none; }
 
+.mc-hide-scrolls {
+  overflow: hidden; }
+
+body .mc-cycle {
+  height: 100%;
+  left: 0;
+  overflow: hidden;
+  position: fixed;
+  top: 0;
+  width: 100%;
+  z-index: -1; }
+
+div.mc-image {
+  /*NOTE: Mozilla flickers when fading and using 'all', so we have to be specific with what property we want to transition:
+       If you are using fading transitions, use 'opacity: */
+  -webkit-transition: opacity 1s ease-in-out;
+  -moz-transition: opacity 1s ease-in-out;
+  -o-transition: opacity 1s ease-in-out;
+  transition: opacity 1s ease-in-out;
+  /*If you are using horizontal slide transitions, use the following CSS:
+  -webkit-transition: left 1s ease-in-out;
+  -moz-transition: left 1s ease-in-out;
+  -o-transition: left 1s ease-in-out;
+  transition: left 1s ease-in-out;*/
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  background-position: center center;
+  background-repeat: no-repeat;
+  height: 100%;
+  overflow: hidden;
+  width: 100%;
+  background-attachment: fixed; }
+
+.mc-old-browser .mc-image {
+  overflow: hidden; }
+
 @font-face {
   font-family: 'Greek';
   src: url(../../fonts/GFSSolomos.otf); }
@@ -150,16 +179,7 @@ html {
 body {
   margin: 0;
   padding: 0;
-  color: white;
-  background-image: url("../images/home-page/main2.jpg");
-  width: 100%;
-  height: 100%;
-  background-position: center;
-  background-size: cover;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  background-repeat: no-repeat;
-  background-attachment: fixed; }
+  color: white; }
 
 .phone {
   font-family: Greek;
@@ -320,16 +340,7 @@ html {
 body {
   margin: 0;
   padding: 0;
-  color: white;
-  background-image: url("../images/home-page/main2.jpg");
-  width: 100%;
-  height: 100%;
-  background-position: center;
-  background-size: cover;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  background-repeat: no-repeat;
-  background-attachment: fixed; }
+  color: white; }
 
 .phone {
   font-family: Greek;
@@ -481,16 +492,7 @@ html {
 body {
   margin: 0;
   padding: 0;
-  color: white;
-  background-image: url("../images/home-page/main2.jpg");
-  width: 100%;
-  height: 100%;
-  background-position: center;
-  background-size: cover;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  background-repeat: no-repeat;
-  background-attachment: fixed; }
+  color: white; }
 
 .phone {
   font-family: Greek;
@@ -650,16 +652,7 @@ html {
 body {
   margin: 0;
   padding: 0;
-  color: white;
-  background-image: url("../images/home-page/main2.jpg");
-  width: 100%;
-  height: 100%;
-  background-position: center;
-  background-size: cover;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  background-repeat: no-repeat;
-  background-attachment: fixed; }
+  color: white; }
 
 .phone {
   font-family: Greek;
@@ -819,16 +812,7 @@ html {
 body {
   margin: 0;
   padding: 0;
-  color: white;
-  background-image: url("../images/home-page/main2.jpg");
-  width: 100%;
-  height: 100%;
-  background-position: center;
-  background-size: cover;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  background-repeat: no-repeat;
-  background-attachment: fixed; }
+  color: white; }
 
 .phone {
   font-family: Greek;
