Site ready as customer needs
- Waiting the final pictures and text for some products

--- a/css/variables.scss
+++ b/css/variables.scss
@@ -22,5 +22,5 @@ $large-size : 25px;
 //Fonts
 @font-face {
   font-family: 'Greek';
-  src: url(../../fonts/GFSSolomos.otf);
+  src: url(../css/fonts/GFSSolomos.otf);
 }
