--- a/css/customStylesheet.css
+++ b/css/customStylesheet.css
@@ -1,6 +1,6 @@
 @font-face {
   font-family: 'Greek';
-  src: url(../../fonts/GFSSolomos.otf); }
+  src: url(../css/fonts/GFSSolomos.otf); }
 html {
   height: 100%;
   min-height: 100%; }
@@ -165,7 +165,7 @@ div.mc-image {
 
 @font-face {
   font-family: 'Greek';
-  src: url(../../fonts/GFSSolomos.otf); }
+  src: url(../css/fonts/GFSSolomos.otf); }
 html {
   height: 100%;
   min-height: 100%; }
@@ -326,7 +326,7 @@ a {
     display: none; } }
 @font-face {
   font-family: 'Greek';
-  src: url(../../fonts/GFSSolomos.otf); }
+  src: url(../css/fonts/GFSSolomos.otf); }
 html {
   height: 100%;
   min-height: 100%; }
@@ -478,7 +478,7 @@ a {
     display: none; } }
 @font-face {
   font-family: 'Greek';
-  src: url(../../fonts/GFSSolomos.otf); }
+  src: url(../css/fonts/GFSSolomos.otf); }
 html {
   height: 100%;
   min-height: 100%; }
@@ -638,7 +638,7 @@ a {
     display: none; } }
 @font-face {
   font-family: 'Greek';
-  src: url(../../fonts/GFSSolomos.otf); }
+  src: url(../css/fonts/GFSSolomos.otf); }
 html {
   height: 100%;
   min-height: 100%; }
@@ -798,7 +798,7 @@ a {
     display: none; } }
 @font-face {
   font-family: 'Greek';
-  src: url(../../fonts/GFSSolomos.otf); }
+  src: url(../css/fonts/GFSSolomos.otf); }
 html {
   height: 100%;
   min-height: 100%; }
