--- a/css/general-mixins.scss
+++ b/css/general-mixins.scss
@@ -33,18 +33,18 @@ body{
 }
 
 .quote{
-
+  font-family:'Greek';
+  margin: 10px 0;
   background-color:rgba(16, 35, 15, 0.8) ;
   border: 1px solid white;
   border-radius: 10px;
   padding: 5px;
 }
 
-
-
-.quote {
-  font-family:'Greek';
-  margin: 10px 0;
+footer{
+  & a:hover{
+    color: white;
+  }
 }
 
 ul{
