Added new content from customer
- Added some new stuff the client wanted in products

--- a/css/non-main-pages/large-screens/non-main-large.scss
+++ b/css/non-main-pages/large-screens/non-main-large.scss
@@ -51,6 +51,9 @@
 
   }
 
+  //=====Footer absolute=====
+
+
   //=====History=========
   #history{
     .article-with-opacity{
@@ -154,13 +157,13 @@
   }
 
 
-  #meat-page{
+
     .footer{
       position: relative;
       width: 100%;
 
     }
-  }
+
 
   .what-they-say{
     width: 100%;
