Site finished and client very pleased!
- Everything ready and  tested

--- a/css/non-main-pages/non-main-pages.scss
+++ b/css/non-main-pages/non-main-pages.scss
@@ -36,6 +36,8 @@ body{
 
   }
 
+  .phone{color:black}
+
 }
 //========End History page=======
 
@@ -206,7 +208,9 @@ body{
   }
 }
 
-
+.list-size{
+  font-size:16px;
+}
 
 //=======End What they say========
 
