--- a/css/non-main-pages/non-main-pages.css
+++ b/css/non-main-pages/non-main-pages.css
@@ -166,6 +166,8 @@ body {
     border-radius: 10px;
     margin-bottom: 20px;
     background-color: rgba(255, 255, 255, 0.4); }
+  #history .phone {
+    color: black; }
 
 #butcher-shop-page {
   background: url("../../images/butcher-shop/kreopoleio-compressor.jpg") no-repeat;
@@ -274,6 +276,9 @@ body {
   font-style: normal;
   font-weight: bold;
   font-family: Greek; }
+
+.list-size {
+  font-size: 16px; }
 
 .contact-page .emphasis {
   border: 1px solid black; }
