Minor bug fixed

--- a/css/non-main-pages/small-screens/non-main-small-screens.scss
+++ b/css/non-main-pages/small-screens/non-main-small-screens.scss
@@ -5,7 +5,7 @@
 @media only screen and (max-width:479px) {
 
   #butcher-shop-page{
-    background: url("../../images/butcher-shop/Farma.2.jpg")no-repeat center center fixed;
+    background: url("../../../images/butcher-shop/kreopoleio-compressor.jpg")no-repeat  center center fixed;
     background-size: cover;
     -webkit-background-size: cover;
     -moz-background-size: cover;
