--- a/css/non-main-pages/non-main-pages.css
+++ b/css/non-main-pages/non-main-pages.css
@@ -436,7 +436,7 @@ address {
     z-index: 999; } }
 @media only screen and (min-width: 480px) and (max-width: 719px) {
   #butcher-shop-page {
-    background: url("../../images/butcher-shop/Farma.2.jpg") no-repeat center center fixed;
+    background: url("../../../images/butcher-shop/kreopoleio-compressor.jpg") no-repeat center center fixed;
     background-size: cover;
     -webkit-background-size: cover;
     -moz-background-size: cover; }
