--- a/css/non-main-pages/galaxy-resolutions/galaxy-resolutions.scss
+++ b/css/non-main-pages/galaxy-resolutions/galaxy-resolutions.scss
@@ -17,7 +17,7 @@
   }
 
   #butcher-shop-page {
-    background: url("../../images/butcher-shop/Farma.2.jpg") no-repeat center center fixed;
+    background: url("../../../images/butcher-shop/kreopoleio-compressor.jpg") no-repeat center center fixed;
     background-size: cover;
     -webkit-background-size: cover;
     -moz-background-size: cover;
