--- a/css/non-main-pages/iPad-screens/non-main-medium-iPad-landscape.scss
+++ b/css/non-main-pages/iPad-screens/non-main-medium-iPad-landscape.scss
@@ -3,7 +3,7 @@
 //==========Medium iPad landscape screens==============
 @media only screen and (min-width:768px) and(max-width:1023px) {
   #butcher-shop-page {
-    background: url("../../images/butcher-shop/Farma.2.jpg") no-repeat center center fixed;
+    background: url("../../../images/butcher-shop/kreopoleio-compressor.jpg") no-repeat center center fixed;
     background-size: cover;
     -webkit-background-size: cover;
     -moz-background-size: cover;
