--- a/css/non-main-pages/iPad-screens/non-main-medium-iPad-portrait.scss
+++ b/css/non-main-pages/iPad-screens/non-main-medium-iPad-portrait.scss
@@ -3,7 +3,7 @@
 //==========Medium iPad portrait screens==============
 @media only screen and (width:1024px)  {
   #butcher-shop-page {
-    background: url("../../images/butcher-shop/Farma.2.jpg") no-repeat center center fixed;
+    background: url("../../../images/butcher-shop/kreopoleio-compressor.jpg") no-repeat center center fixed;
     background-size: cover;
     -webkit-background-size: cover;
     -moz-background-size: cover;
@@ -111,7 +111,7 @@
 
 @media only screen and (min-width:1025px) and(max-width:1199px) {
   #butcher-shop-page {
-    background: url("../../images/butcher-shop/Farma.2.jpg") no-repeat center center fixed;
+    background: url("../../../images/butcher-shop/kreopoleio-compressor.jpg") no-repeat center center fixed;
     background-size: cover;
     -webkit-background-size: cover;
     -moz-background-size: cover;
