--- a/css/non-main-pages/non-main-pages.css
+++ b/css/non-main-pages/non-main-pages.css
@@ -504,7 +504,7 @@ address {
     z-index: 999; }
 
   #butcher-shop-page {
-    background: url("../../images/butcher-shop/Farma.2.jpg") no-repeat center center fixed;
+    background: url("../../../images/butcher-shop/kreopoleio-compressor.jpg") no-repeat center center fixed;
     background-size: cover;
     -webkit-background-size: cover;
     -moz-background-size: cover; }
@@ -533,7 +533,7 @@ address {
     height: 1100px; } }
 @media only screen and (min-width: 768px) and (max-width: 1023px) {
   #butcher-shop-page {
-    background: url("../../images/butcher-shop/Farma.2.jpg") no-repeat center center fixed;
+    background: url("../../../images/butcher-shop/kreopoleio-compressor.jpg") no-repeat center center fixed;
     background-size: cover;
     -webkit-background-size: cover;
     -moz-background-size: cover; }
@@ -597,7 +597,7 @@ address {
     height: 500px; } }
 @media only screen and (width: 1024px) {
   #butcher-shop-page {
-    background: url("../../images/butcher-shop/Farma.2.jpg") no-repeat center center fixed;
+    background: url("../../../images/butcher-shop/kreopoleio-compressor.jpg") no-repeat center center fixed;
     background-size: cover;
     -webkit-background-size: cover;
     -moz-background-size: cover; }
@@ -663,7 +663,7 @@ address {
     height: 600px; } }
 @media only screen and (min-width: 1025px) and (max-width: 1199px) {
   #butcher-shop-page {
-    background: url("../../images/butcher-shop/Farma.2.jpg") no-repeat center center fixed;
+    background: url("../../../images/butcher-shop/kreopoleio-compressor.jpg") no-repeat center center fixed;
     background-size: cover;
     -webkit-background-size: cover;
     -moz-background-size: cover; }
