Cleaned some duplicated code improved background performance

--- a/css/non-main-pages/large-screens/non-main-large.scss
+++ b/css/non-main-pages/large-screens/non-main-large.scss
@@ -31,7 +31,7 @@
   #butcher-shop-page {
 
     .phone {
-      color: white;
+      color: black;
     }
 
 
@@ -126,10 +126,6 @@
   }
 
 
-  .footer{
-    height: 65px;
-
-  }
 
 
   .footer-rights{
