--- a/css/non-main-pages/non-main-pages.scss
+++ b/css/non-main-pages/non-main-pages.scss
@@ -44,7 +44,7 @@ body{
 
 //=============Το κρεοπωλέιο μας=============
 #butcher-shop-page{
-  background: url("../../images/butcher-shop/kreopoleio-compressor.jpg")no-repeat ;
+  background: url("../../images/butcher-shop/kreopoleio-compressor.jpg")no-repeat center center fixed ;
   background-size: cover;
   -webkit-background-size: cover;
   -moz-background-size: cover;
